Add README file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="./assets/stylesheet/application.css">
 
-  <title>Github pages test</title>
+  <title>Mitsuhiro Komuro Portfolio</title>
+  <link rel="icon" type="image/png" href="./assets/images/ghocat.png">
+  <link rel="apple-touch-icon" type="image/png" href="./assets/images/ghocat.png">
+
 
   <!--JavaScript-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
