--- a/index.html
+++ b/index.html
@@ -99,9 +99,8 @@
           <div class="card-content">
             <span class="card-title">Biography</span>
             <p>
-              Mr. Mitsuhiro Komuro received B.S. degrees in the Hosei University Information and Computer Sciences,
-              Japan,
-              in 2017.<br />
+              Mr. Mitsuhiro Komuro received B.S. degrees in the Hosei University Graduate School of Computer and
+              Information Sciences, Japan, in 2017.<br />
               Since 2018, he has been a student at Hosei University Graduate School of Conputer Information and
               Science, Japan.<br />
               His research interest include realization of human-like artificial intelligence.
@@ -131,12 +130,12 @@
               <li class="br">
                 <i class="material-icons left">school</i>
                 <p class="comp_s">April 2014 - March 2018</p>
-                <p class="comp_sh">Hosei University Information and Computer Sciences</p>
+                <p class="comp_sh">Hosei University Faculty of Computer and Information Sciences</p>
               </li>
               <li>
                 <i class="material-icons left">school</i>
                 <p class="comp_s">April 2018 -</p>
-                <p class="comp_sh">Hosei University Graduate School of Information and Computer Sciences</p>
+                <p class="comp_sh">Hosei University Graduate School of Computer and Information Sciences</p>
               </li>
             </ul>
           </div>
