Fix the wrong words

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <p>
               Mr. Mitsuhiro Komuro received B.S. degrees in the Hosei University Graduate School of Computer and
               Information Sciences, Japan, in 2017.<br />
-              Since 2018, he has been a student at Hosei University Graduate School of Conputer Information and
+              Since 2018, he has been a student at Hosei University Graduate School of Conputer and Information
               Science, Japan.<br />
               His research interest include realization of human-like artificial intelligence.
             </p>
