--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="card hoverable">
           <div class="card-content center">
             <span>
-              <img src="./assets/images/face.png" class="circle" , width="100" height="100">
+              <img src="./assets/images/face.png", width="100" height="100">
             </span><br />
             <h2 class="name_s">Mitsuhiro Komuro</h2>
             <h3 class="position_s">Graduate student [Master Course]</h3>
