Update view of index page

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="card">
           <div class="card-content">
             <span class="card-title">Interest</span>
-            <ul>
+            <ul class="browser-default">
               <li>Artificial Intelligence</li>
               <li>Human-like AI</li>
               <li>Machine learning</li>
