Fix typo in bio

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="card hoverable">
           <div class="card-content center">
             <span>
-              <img src="./assets/images/face.png", width="100" height="100">
+              <img src="./assets/images/face.png" , width="100" height="100">
             </span><br />
             <h2 class="name_s">Mitsuhiro Komuro</h2>
             <h3 class="position_s">Graduate student [Master Course]</h3>
@@ -99,10 +99,10 @@
           <div class="card-content">
             <span class="card-title">Biography</span>
             <p>
-              Mr. Mitsuhiro Komuro received B.S. degrees in the Hosei University Graduate School of Computer and
-              Information Sciences, Japan, in 2017.<br />
-              Since 2018, he has been a student at Hosei University Graduate School of Conputer and Information
-              Science, Japan.<br />
+              Mr. Mitsuhiro Komuro received B.S. degrees in the Hosei University aculty of Computer and Information
+              Sciences, Japan, in 2017.<br />
+              Since 2018, he has been a student at Hosei University Graduate School of Computer and Information
+              Sciences, Japan.<br />
               His research interest include realization of human-like artificial intelligence.
             </p>
           </div>
