Refix the typo and add interest item

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="card-content">
             <span class="card-title">Biography</span>
             <p>
-              Mr. Mitsuhiro Komuro received B.S. degrees in the Hosei University aculty of Computer and Information
+              Mr. Mitsuhiro Komuro received B.S. degrees in the Hosei University Faculty of Computer and Information
               Sciences, Japan, in 2017.<br />
               Since 2018, he has been a student at Hosei University Graduate School of Computer and Information
               Sciences, Japan.<br />
@@ -118,6 +118,7 @@
               <li>Machine learning</li>
               <li>Deep learning</li>
               <li>Reinforcement learning</li>
+              <li>Personal (Conversational) Assistant</li>
             </ul>
           </div>
         </div>
