--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
   <link rel="stylesheet" href="./assets/stylesheet/application.css">
 
   <title>Mitsuhiro Komuro Portfolio</title>
-  <link rel="icon" type="image/png" href="./assets/images/ghocat.png">
-  <link rel="apple-touch-icon" type="image/png" href="./assets/images/ghocat.png">
+  <link rel="icon" type="image/png" href="./assets/images/ghocat_r.png">
+  <link rel="apple-touch-icon" type="image/png" href="./assets/images/ghocat_r.png">
 
 
   <!--JavaScript-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="./assets/javascript/applicaiton.js"></script>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134623824-1"></script>
 
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -36,6 +39,7 @@
           <ul class="right hide-on-med-and-down">
             <li><a href="#profile">Profile</a></li>
             <li><a href="#works">Works</a></li>
+            <li><a href="https://danboruya.github.io/blog/" class="waves-efect waves-light">Blog</a></li>
             <li><a href="https://github.com/Danboruya" class="waves-efect waves-light"><i class="fab fa-github left"></i>GitHub</a></li>
             <li><a href="https://twitter.com/danboruya" class="waves-efect waves-light"><i class="fab fa-twitter left"></i>Twitter</a></li>
             <li><a href="https://www.facebook.com/komuro.mitsuhiro.5" class="waves-efect waves-light"><i class="fab fa-facebook left"></i>Facebook</a></li>
@@ -49,7 +53,7 @@
         <li>
           <div class="user-view">
             <div class="background">
-              <img src="./assets/images/background.png" alt="background" width="300" height="160">
+              <img src="./assets/images/background.png" alt="background" width="300" height="178">
             </div>
             <span>
               <img src="./assets/images/ghocat.png" class="circle" alt="icon">
@@ -64,11 +68,11 @@
         </li>
         <li><a href="#profile">Profile</a></li>
         <li><a href="#works">Works</a></li>
+        <li><a href="https://danboruya.github.io/blog/" class="waves-efect waves-light">Blog</a></li>
         <div class="divider"></div>
         <li><a href="https://github.com/Danboruya" class="waves-efect waves-light"><i class="fab fa-github left"></i>GitHub</a></li>
         <li><a href="https://twitter.com/danboruya" class="waves-efect waves-light"><i class="fab fa-twitter left"></i>Twitter</a></li>
         <li><a href="https://www.facebook.com/komuro.mitsuhiro.5" class="waves-efect waves-light"><i class="fab fa-facebook left"></i>Facebook</a></li>
-        <!--<li><a href="" class="waves-efect waves-light"><i class="fab fa-medium left"></i>Medium</a></li>-->
       </ul>
     </aside>
   </header>
@@ -234,26 +238,27 @@
         <div class="col l6 s12">
           <h5 class="white-text">Contact</h5>
           <p class="grey-text text-lighten-4">E-mail:&nbsp;
-            <a href="mailto:mitsuhiro.komuro@gmail.com">mitsuhiro.komuro@gmail.com</a>
+            <a href="mailto:mitsuhiro.komuro@gmail.com" class="waves-efect waves-light white-text">mitsuhiro.komuro@gmail.com</a>
           </p>
         </div>
         <div class="col l4 offset-l2 s12">
           <h5 class="white-text">Links</h5>
           <ul>
-            <li><a href="#profile">Profile</a></li>
-            <li><a href="#works">Works</a></li>
+            <li><a href="#profile" class="waves-efect waves-light white-text">Profile</a></li>
+            <li><a href="#works" class="waves-efect waves-light white-text">Works</a></li>
+            <li><a href="https://danboruya.github.io/blog/" class="waves-efect waves-light white-text">Blog</a></li>
             <li>
-              <a href="https://github.com/Danboruya" class="waves-efect waves-light">
+              <a href="https://github.com/Danboruya" class="waves-efect waves-light white-text">
                 <i class="fab fa-github"></i>&nbsp;&nbsp;GitHub
               </a>
             </li>
             <li>
-              <a href="https://twitter.com/danboruya" class="waves-efect waves-light">
+              <a href="https://twitter.com/danboruya" class="waves-efect waves-light white-text">
                 <i class="fab fa-twitter"></i>&nbsp;&nbsp;Twitter
               </a>
             </li>
             <li>
-              <a href="https://www.facebook.com/komuro.mitsuhiro.5" class="waves-efect waves-light">
+              <a href="https://www.facebook.com/komuro.mitsuhiro.5" class="waves-efect waves-light white-text">
                 <i class="fab fa-facebook"></i>&nbsp;&nbsp;Facebook
               </a>
             </li>
