Modified favicon image

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <link rel="stylesheet" href="./assets/stylesheet/application.css">
 
   <title>Mitsuhiro Komuro Portfolio</title>
-  <link rel="icon" type="image/png" href="./assets/images/ghocat_r.png">
-  <link rel="apple-touch-icon" type="image/png" href="./assets/images/ghocat_r.png">
+  <link rel="icon" type="image/png" href="./assets/images/ghocatr.png">
+  <link rel="apple-touch-icon" type="image/png" href="./assets/images/ghocatr.png">
 
 
   <!--JavaScript-->
