Modified user icon on slide-nav

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <link rel="stylesheet" href="./assets/stylesheet/application.css">
 
   <title>Mitsuhiro Komuro Portfolio</title>
-  <link rel="icon" type="image/png" href="./assets/images/ghocatr.png">
-  <link rel="apple-touch-icon" type="image/png" href="./assets/images/ghocatr.png">
+  <link rel="icon" type="image/png" href="./assets/images/ghocat.png">
+  <link rel="apple-touch-icon" type="image/png" href="./assets/images/ghocat.png">
 
 
   <!--JavaScript-->
@@ -56,7 +56,7 @@
               <img src="./assets/images/background.png" alt="background" width="300" height="178">
             </div>
             <span>
-              <img src="./assets/images/ghocat.png" class="circle" alt="icon">
+              <img src="./assets/images/ghocat.png" alt="icon">
             </span>
             <span class="white-text name">
               Mitsuhiro Komuro
