Fix the view of user icon on slide-nav

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <img src="./assets/images/background.png" alt="background" width="300" height="178">
             </div>
             <span>
-              <img src="./assets/images/ghocat.png" alt="icon">
+              <img src="./assets/images/ghocat.png" class="circle" alt="icon">
             </span>
             <span class="white-text name">
               Mitsuhiro Komuro
