Add contact form link

--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="./assets/javascript/applicaiton.js"></script>
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134623824-1"></script>
-
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -43,7 +40,7 @@
             <li><a href="https://github.com/Danboruya" class="waves-efect waves-light"><i class="fab fa-github left"></i>GitHub</a></li>
             <li><a href="https://twitter.com/danboruya" class="waves-efect waves-light"><i class="fab fa-twitter left"></i>Twitter</a></li>
             <li><a href="https://www.facebook.com/komuro.mitsuhiro.5" class="waves-efect waves-light"><i class="fab fa-facebook left"></i>Facebook</a></li>
-            <!--<li><a href="" class="waves-efect waves-light"><i class="fab fa-medium left"></i>Medium</a></li>-->
+            <li><a href="https://goo.gl/forms/b8WWg178OdzlCpAu1" class="waves-efect waves-light">Contact Us</a></li>
           </ul>
         </div>
       </nav>
@@ -237,9 +234,10 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Contact</h5>
-          <p class="grey-text text-lighten-4">E-mail:&nbsp;
-            <a href="mailto:mitsuhiro.komuro@gmail.com" class="waves-efect waves-light white-text">mitsuhiro.komuro@gmail.com</a>
-          </p>
+          <ul>
+            <li class="grey-text text-lighten-4">E-mail:&nbsp;<a href="mailto:mitsuhiro.komuro@gmail.com" class="waves-efect waves-light white-text">mitsuhiro.komuro@gmail.com</a></li>
+            <li><a href="https://goo.gl/forms/b8WWg178OdzlCpAu1" class="waves-efect waves-light grey-text text-lighten-4">Contact Us</a></li>
+          </ul>
         </div>
         <div class="col l4 offset-l2 s12">
           <h5 class="white-text">Links</h5>
