--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m3">
+    </div>
+    <div class="row">
+      <div class="col s12 m4">
         <div class="card">
           <div class="card-content">
             <span class="card-title">Interest</span>
@@ -138,6 +140,20 @@
                 <i class="material-icons left">school</i>
                 <p class="comp_s">April 2018 -</p>
                 <p class="comp_sh">Hosei University Graduate School of Computer and Information Sciences</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m4">
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">Jobs</span>
+            <ul>
+              <li>
+                <i class="material-icons left">business</i>
+                <p class="comp_s">April 2019 - May 2019</p>
+                <p class="comp_sh">Former Internship at 株式会社サイバーエージェント</p>
               </li>
             </ul>
           </div>
@@ -191,7 +207,7 @@
                     Paper Title: Multi-agent reinforcement learning with different parameter configurations using agent durability
                   </li>
                   <li class="pub">
-                    Date: Feb 07, 2020
+                    Date: February 07, 2020
                   </li>
                   <li class="pub">
                     Author: Mr. Mitsuhiro Komuro (Hosei University, Graduate School of Computer and Information Sciences, Master's Student)
