Update some of self-information

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <li><a href="https://github.com/Danboruya" class="waves-efect waves-light"><i class="fab fa-github left"></i>GitHub</a></li>
             <li><a href="https://twitter.com/danboruya" class="waves-efect waves-light"><i class="fab fa-twitter left"></i>Twitter</a></li>
             <li><a href="https://www.facebook.com/komuro.mitsuhiro.5" class="waves-efect waves-light"><i class="fab fa-facebook left"></i>Facebook</a></li>
+            <li><a href="https://www.linkedin.com/in/mitsuhiro-komuro-l12s" class="waves-efect waves-light"><i class="fab fa-linkedin left"></i>Linkedin</a></li>
             <li><a href="https://goo.gl/forms/b8WWg178OdzlCpAu1" class="waves-efect waves-light">Contact Us</a></li>
           </ul>
         </div>
@@ -70,6 +71,7 @@
         <li><a href="https://github.com/Danboruya" class="waves-efect waves-light"><i class="fab fa-github left"></i>GitHub</a></li>
         <li><a href="https://twitter.com/danboruya" class="waves-efect waves-light"><i class="fab fa-twitter left"></i>Twitter</a></li>
         <li><a href="https://www.facebook.com/komuro.mitsuhiro.5" class="waves-efect waves-light"><i class="fab fa-facebook left"></i>Facebook</a></li>
+        <li><a href="https://www.linkedin.com/in/mitsuhiro-komuro-l12s" class="waves-efect waves-light"><i class="fab fa-linkedin"></i>Linkedin</a></li>
       </ul>
     </aside>
   </header>
@@ -88,7 +90,7 @@
               <img src="./assets/images/face.png" , width="100" height="100">
             </span><br />
             <h2 class="name_s">Mitsuhiro Komuro</h2>
-            <h3 class="position_s">Graduate student [Master Course]</h3>
+            <h3 class="position_s">Probationary worker</h3>
             <h3 class="email_s">E-mail:&nbsp;<a href="mailto:mitsuhiro.komuro@gmail.com">mitsuhiro.komuro@gmail.com</a></h3>
             <h3 class="affiliation">Affiliation:&nbsp;<a href="https://cis.hosei.ac.jp/gs/">Hosei University Graduate
                 school of Computer and Information Sciences</a></h3>
@@ -100,10 +102,9 @@
           <div class="card-content">
             <span class="card-title">Biography</span>
             <p>
-              Mr. Mitsuhiro Komuro received B.S. degrees in the Hosei University Faculty of Computer and Information
-              Sciences, Japan, in 2017.<br />
-              Since 2018, he has been a student at Hosei University Graduate School of Computer and Information
-              Sciences, Japan.<br />
+              Mr. Mitsuhiro Komuro received M.S. degrees in the Hosei University Graduate School of Computer
+              and Information Sciences, Japan, in 2020.<br />
+              Since 2020, he has been a worker at Hitachi Industry &amp; Control Solutions, Ltd, Japan.<br />
               His research interest include realization of human-like artificial intelligence.
             </p>
           </div>
@@ -133,13 +134,13 @@
             <ul>
               <li>
                 <i class="material-icons left">school</i>
-                <p class="comp_s">April 2014 - March 2018</p>
-                <p class="comp_sh">Hosei University Faculty of Computer and Information Sciences</p>
+                <p class="comp_s">April 2018 - March 2020</p>
+                <p class="comp_sh">Hosei University Graduate School of Computer and Information Sciences</p>
               </li>
               <li>
                 <i class="material-icons left">school</i>
-                <p class="comp_s">April 2018 -</p>
-                <p class="comp_sh">Hosei University Graduate School of Computer and Information Sciences</p>
+                <p class="comp_s">April 2014 - March 2018</p>
+                <p class="comp_sh">Hosei University Faculty of Computer and Information Sciences</p>
               </li>
             </ul>
           </div>
@@ -150,6 +151,11 @@
           <div class="card-content">
             <span class="card-title">Jobs</span>
             <ul>
+              <li>
+                <i class="material-icons left">business</i>
+                <p class="comp_s">April 2020 - </p>
+                <p class="comp_sh">Probationary worker at 株式会社日立産業制御ソリューションズ</p>
+              </li>
               <li>
                 <i class="material-icons left">business</i>
                 <p class="comp_s">April 2019 - May 2019</p>
