Update copyright year and current job position

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               <li>
                 <i class="material-icons left">business</i>
                 <p class="comp_s">April 2020 - </p>
-                <p class="comp_sh">Probationary worker at 株式会社日立産業制御ソリューションズ</p>
+                <p class="comp_sh">System Engineer trainee at 株式会社日立産業制御ソリューションズ</p>
               </li>
               <li>
                 <i class="material-icons left">business</i>
@@ -320,7 +320,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-        &copy; 2019 Mitsuhiro Komuro ALL RIGHTS RESERVED.
+        &copy; 2020 Mitsuhiro Komuro ALL RIGHTS RESERVED.
       </div>
     </div>
   </footer>
