--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <img src="./assets/images/face.png" , width="100" height="100">
             </span><br />
             <h2 class="name_s">Mitsuhiro Komuro</h2>
-            <h3 class="position_s">Probationary worker</h3>
+            <h3 class="position_s">Software Engineer Trainee</h3>
             <h3 class="email_s">E-mail:&nbsp;<a href="mailto:mitsuhiro.komuro@gmail.com">mitsuhiro.komuro@gmail.com</a></h3>
             <h3 class="affiliation">Affiliation:&nbsp;<a href="https://cis.hosei.ac.jp/gs/">Hosei University Graduate
                 school of Computer and Information Sciences</a></h3>
@@ -123,6 +123,8 @@
               <li>Deep learning</li>
               <li>Reinforcement learning</li>
               <li>Personal (Conversational) Assistant</li>
+              <br/>
+              <li>Flutter, Android, Golang, Docker, GCP, Firebase, etc.</li>
             </ul>
           </div>
         </div>
@@ -226,6 +228,20 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col s12">
+          <div class="card hoverable">
+            <div class="card-content">
+              <span class="card-title">Certifications</span>
+              <ul class="browser-default">
+                <li class="pub">
+                  Fundamental Information Technology Engineer Examination, IPA, 2021
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="col s12 m4">
         <div class="card hoverable">
           <div class="card-image">
@@ -320,7 +336,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-        &copy; 2020 Mitsuhiro Komuro ALL RIGHTS RESERVED.
+        &copy; 2021 Mitsuhiro Komuro ALL RIGHTS RESERVED.
       </div>
     </div>
   </footer>
