Update Certification item.
Add Applied Information Technology Engineer Examination information.

--- a/index.html
+++ b/index.html
@@ -237,6 +237,9 @@
                 <li class="pub">
                   Fundamental Information Technology Engineer Examination, IPA, 2021
                 </li>
+                <li class="pub">
+                  Applied Information Technology Engineer Examination, IPA, 2021
+                </li>
               </ul>
             </div>
           </div>
