update job role

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <img src="./assets/images/face.png" , width="100" height="100">
             </span><br />
             <h2 class="name_s">Mitsuhiro Komuro</h2>
-            <h3 class="position_s">Software Engineer Trainee</h3>
+            <h3 class="position_s">Software Engineer</h3>
             <h3 class="email_s">E-mail:&nbsp;<a href="mailto:mitsuhiro.komuro@gmail.com">mitsuhiro.komuro@gmail.com</a></h3>
             <h3 class="affiliation">Affiliation:&nbsp;<a href="https://cis.hosei.ac.jp/gs/">Hosei University Graduate
                 school of Computer and Information Sciences</a></h3>
@@ -155,8 +155,13 @@
             <ul>
               <li>
                 <i class="material-icons left">business</i>
-                <p class="comp_s">April 2020 - </p>
-                <p class="comp_sh">System Engineer trainee at 株式会社日立産業制御ソリューションズ</p>
+                <p class="comp_s">April 2022 - </p>
+                <p class="comp_sh">Software Engineer at 株式会社日立産業制御ソリューションズ</p>
+              </li>
+              <li>
+                <i class="material-icons left">business</i>
+                <p class="comp_s">April 2020 - April 2022</p>
+                <p class="comp_sh">Software Engineer trainee at 株式会社日立産業制御ソリューションズ</p>
               </li>
               <li>
                 <i class="material-icons left">business</i>
