--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
           <ul class="right hide-on-med-and-down">
             <li><a href="#profile">Profile</a></li>
             <li><a href="#works">Works</a></li>
-            <li><a href="https://danboruya.github.io/blog/" class="waves-efect waves-light">Blog</a></li>
-            <li><a href="https://github.com/Danboruya" class="waves-efect waves-light"><i class="fab fa-github left"></i>GitHub</a></li>
-            <li><a href="https://twitter.com/danboruya" class="waves-efect waves-light"><i class="fab fa-twitter left"></i>Twitter</a></li>
+            <li><a href="https://l10es.github.io/blog/" class="waves-efect waves-light">Blog</a></li>
+            <li><a href="https://github.com/l10es" class="waves-efect waves-light"><i class="fab fa-github left"></i>GitHub</a></li>
+            <li><a href="https://twitter.com/ll10es" class="waves-efect waves-light"><i class="fab fa-twitter left"></i>Twitter</a></li>
             <li><a href="https://www.facebook.com/komuro.mitsuhiro.5" class="waves-efect waves-light"><i class="fab fa-facebook left"></i>Facebook</a></li>
             <li><a href="https://www.linkedin.com/in/mitsuhiro-komuro-l12s" class="waves-efect waves-light"><i class="fab fa-linkedin left"></i>Linkedin</a></li>
             <li><a href="https://goo.gl/forms/b8WWg178OdzlCpAu1" class="waves-efect waves-light">Contact Us</a></li>
@@ -66,10 +66,10 @@
         </li>
         <li><a href="#profile">Profile</a></li>
         <li><a href="#works">Works</a></li>
-        <li><a href="https://danboruya.github.io/blog/" class="waves-efect waves-light">Blog</a></li>
+        <li><a href="https://l10es.github.io/blog/" class="waves-efect waves-light">Blog</a></li>
         <div class="divider"></div>
-        <li><a href="https://github.com/Danboruya" class="waves-efect waves-light"><i class="fab fa-github left"></i>GitHub</a></li>
-        <li><a href="https://twitter.com/danboruya" class="waves-efect waves-light"><i class="fab fa-twitter left"></i>Twitter</a></li>
+        <li><a href="https://github.com/l10es" class="waves-efect waves-light"><i class="fab fa-github left"></i>GitHub</a></li>
+        <li><a href="https://twitter.com/ll10es" class="waves-efect waves-light"><i class="fab fa-twitter left"></i>Twitter</a></li>
         <li><a href="https://www.facebook.com/komuro.mitsuhiro.5" class="waves-efect waves-light"><i class="fab fa-facebook left"></i>Facebook</a></li>
         <li><a href="https://www.linkedin.com/in/mitsuhiro-komuro-l12s" class="waves-efect waves-light"><i class="fab fa-linkedin"></i>Linkedin</a></li>
       </ul>
@@ -264,7 +264,7 @@
             </p>
           </div>
           <div class="card-action">
-            <a href="https://github.com/Danboruya/gr-rnn-sentence-classification">GitHub repository</a>
+            <a href="https://github.com/l10es/gr-rnn-sentence-classification">GitHub repository</a>
           </div>
         </div>
       </div>
@@ -282,7 +282,7 @@
             </p>
           </div>
           <div class="card-action">
-            <a href="https://github.com/Danboruya/lab-companion">GitHub repository</a>
+            <a href="https://github.com/l10es/lab-companion">GitHub repository</a>
           </div>
         </div>
       </div>
@@ -301,7 +301,7 @@
             </p>
           </div>
           <div class="card-action">
-            <a href="https://github.com/Danboruya/tonttu-spiegel">GitHub repository</a>
+            <a href="https://github.com/l10es/tonttu-spiegel">GitHub repository</a>
           </div>
         </div>
       </div>
@@ -322,14 +322,14 @@
           <ul>
             <li><a href="#profile" class="waves-efect waves-light white-text">Profile</a></li>
             <li><a href="#works" class="waves-efect waves-light white-text">Works</a></li>
-            <li><a href="https://danboruya.github.io/blog/" class="waves-efect waves-light white-text">Blog</a></li>
+            <li><a href="https://l10es.github.io/blog/" class="waves-efect waves-light white-text">Blog</a></li>
             <li>
-              <a href="https://github.com/Danboruya" class="waves-efect waves-light white-text">
+              <a href="https://github.com/l10es" class="waves-efect waves-light white-text">
                 <i class="fab fa-github"></i>&nbsp;&nbsp;GitHub
               </a>
             </li>
             <li>
-              <a href="https://twitter.com/danboruya" class="waves-efect waves-light white-text">
+              <a href="https://twitter.com/l10es" class="waves-efect waves-light white-text">
                 <i class="fab fa-twitter"></i>&nbsp;&nbsp;Twitter
               </a>
             </li>
