--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <ul class="right hide-on-med-and-down">
             <li><a href="#profile">Profile</a></li>
             <li><a href="#works">Works</a></li>
-            <li><a href="https://l10es.github.io/blog/" class="waves-efect waves-light">Blog</a></li>
+            <li><a href="https://nekorush14.github.io/blog/" class="waves-efect waves-light">Blog</a></li>
             <li><a href="https://github.com/l10es" class="waves-efect waves-light"><i class="fab fa-github left"></i>GitHub</a></li>
             <li><a href="https://twitter.com/ll10es" class="waves-efect waves-light"><i class="fab fa-twitter left"></i>Twitter</a></li>
             <li><a href="https://www.facebook.com/komuro.mitsuhiro.5" class="waves-efect waves-light"><i class="fab fa-facebook left"></i>Facebook</a></li>
@@ -67,7 +67,7 @@
         </li>
         <li><a href="#profile">Profile</a></li>
         <li><a href="#works">Works</a></li>
-        <li><a href="https://l10es.github.io/blog/" class="waves-efect waves-light">Blog</a></li>
+        <li><a href="https://nekorush14.github.io/blog/" class="waves-efect waves-light">Blog</a></li>
         <div class="divider"></div>
         <li><a href="https://github.com/l10es" class="waves-efect waves-light"><i class="fab fa-github left"></i>GitHub</a></li>
         <li><a href="https://twitter.com/ll10es" class="waves-efect waves-light"><i class="fab fa-twitter left"></i>Twitter</a></li>
@@ -333,7 +333,7 @@
           <ul>
             <li><a href="#profile" class="waves-efect waves-light white-text">Profile</a></li>
             <li><a href="#works" class="waves-efect waves-light white-text">Works</a></li>
-            <li><a href="https://l10es.github.io/blog/" class="waves-efect waves-light white-text">Blog</a></li>
+            <li><a href="https://lnekorush14.github.io/blog/" class="waves-efect waves-light white-text">Blog</a></li>
             <li>
               <a href="https://github.com/l10es" class="waves-efect waves-light white-text">
                 <i class="fab fa-github"></i>&nbsp;&nbsp;GitHub
