--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m4 l6">
+      <div class="col s12 m4">
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="0160f00e-7fbe-418f-901d-c0e644304f77" data-share-badge-host="https://www.credly.com"></div>
       </div>
-      <div class="col s12 m4 l6">
+      <div class="col s12 m4">
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="304aff9a-8e2f-4ec9-982d-3356f1df0328" data-share-badge-host="https://www.credly.com"></div>
       </div>
     </div>
