--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col s12 m4 l6">
+      <div class="col s12 m4">
         <div class="card hoverable">
           <div class="card-content">
             <ul class="browser-default">
