--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
           <ul class="right hide-on-med-and-down">
             <li><a href="#profile">Profile</a></li>
             <li><a href="#works">Works</a></li>
-            <li><a href="https://nekorush14.github.io/blog/" class="waves-efect waves-light">Blog</a></li>
-            <li><a href="https://github.com/l10es" class="waves-efect waves-light"><i class="fab fa-github left"></i>GitHub</a></li>
-            <li><a href="https://twitter.com/ll10es" class="waves-efect waves-light"><i class="fab fa-twitter left"></i>Twitter</a></li>
+            <li><a href="https://zenn.dev/nekorush14" class="waves-efect waves-light">Zenn</a></li>
+            <li><a href="https://github.com/nekorush14" class="waves-efect waves-light"><i class="fab fa-github left"></i>GitHub</a></li>
+            <li><a href="https://twitter.com/nekorush14" class="waves-efect waves-light"><i class="fab fa-twitter left"></i>Twitter</a></li>
             <li><a href="https://www.facebook.com/komuro.mitsuhiro.5" class="waves-efect waves-light"><i class="fab fa-facebook left"></i>Facebook</a></li>
-            <li><a href="https://www.linkedin.com/in/mitsuhiro-komuro-l12s" class="waves-efect waves-light"><i class="fab fa-linkedin left"></i>Linkedin</a></li>
+            <li><a href="https://www.linkedin.com/in/nekorush14" class="waves-efect waves-light"><i class="fab fa-linkedin left"></i>Linkedin</a></li>
             <li><a href="https://goo.gl/forms/b8WWg178OdzlCpAu1" class="waves-efect waves-light">Contact Us</a></li>
           </ul>
         </div>
@@ -67,12 +67,12 @@
         </li>
         <li><a href="#profile">Profile</a></li>
         <li><a href="#works">Works</a></li>
-        <li><a href="https://nekorush14.github.io/blog/" class="waves-efect waves-light">Blog</a></li>
+        <li><a href="https://zenn.dev/nekorush14" class="waves-efect waves-light">Zenn</a></li>
         <div class="divider"></div>
-        <li><a href="https://github.com/l10es" class="waves-efect waves-light"><i class="fab fa-github left"></i>GitHub</a></li>
-        <li><a href="https://twitter.com/ll10es" class="waves-efect waves-light"><i class="fab fa-twitter left"></i>Twitter</a></li>
+        <li><a href="https://github.com/nekorush14" class="waves-efect waves-light"><i class="fab fa-github left"></i>GitHub</a></li>
+        <li><a href="https://twitter.com/nekorush14" class="waves-efect waves-light"><i class="fab fa-twitter left"></i>Twitter</a></li>
         <li><a href="https://www.facebook.com/komuro.mitsuhiro.5" class="waves-efect waves-light"><i class="fab fa-facebook left"></i>Facebook</a></li>
-        <li><a href="https://www.linkedin.com/in/mitsuhiro-komuro-l12s" class="waves-efect waves-light"><i class="fab fa-linkedin"></i>Linkedin</a></li>
+        <li><a href="https://www.linkedin.com/in/nekorush14" class="waves-efect waves-light"><i class="fab fa-linkedin"></i>Linkedin</a></li>
       </ul>
     </aside>
   </header>
@@ -91,7 +91,7 @@
               <img src="./assets/images/face.png" , width="100" height="100">
             </span><br />
             <h2 class="name_s">Mitsuhiro Komuro</h2>
-            <h3 class="position_s">Software Engineer</h3>
+            <h3 class="position_s">System Engineer</h3>
             <h3 class="email_s">E-mail:&nbsp;<a href="mailto:mitsuhiro.komuro@gmail.com">mitsuhiro.komuro@gmail.com</a></h3>
             <h3 class="affiliation">Affiliation:&nbsp;<a href="https://cis.hosei.ac.jp/gs/">Hosei University Graduate
                 school of Computer and Information Sciences</a></h3>
@@ -157,12 +157,12 @@
               <li>
                 <i class="material-icons left">business</i>
                 <p class="comp_s">April 2022 - </p>
-                <p class="comp_sh">Software Engineer at 株式会社日立産業制御ソリューションズ</p>
+                <p class="comp_sh">System Engineer at 株式会社日立産業制御ソリューションズ</p>
               </li>
               <li>
                 <i class="material-icons left">business</i>
                 <p class="comp_s">April 2020 - April 2022</p>
-                <p class="comp_sh">Software Engineer trainee at 株式会社日立産業制御ソリューションズ</p>
+                <p class="comp_sh">System Engineer trainee at 株式会社日立産業制御ソリューションズ</p>
               </li>
               <li>
                 <i class="material-icons left">business</i>
@@ -361,7 +361,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-        &copy; 2021 Mitsuhiro Komuro ALL RIGHTS RESERVED.
+        &copy; 2021-2024 Mitsuhiro Komuro ALL RIGHTS RESERVED.
       </div>
     </div>
   </footer>
