--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
               <li>
                 AWS Certified Solutions Architect – Associate, AWS, 2024
               </li>
+              <li>
+                AWS Certified AI Practitioner, AWS, 2024
+              </li>
             </ul>
           </div>
         </div>
@@ -205,6 +208,12 @@
       </div>
       <div class="col">
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="304aff9a-8e2f-4ec9-982d-3356f1df0328" data-share-badge-host="https://www.credly.com"></div>
+      </div>
+      <div class="col">
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="2c9a538c-ffba-4083-bdb9-da96ca6235c0" data-share-badge-host="https://www.credly.com"></div>
+      </div>
+      <div class="col">
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="7607691a-6fce-4a1e-b689-ff3da2c49410" data-share-badge-host="https://www.credly.com"></div>
       </div>
     </div>
     <div class="row">
