feat(jobs): Update current job information

--- a/index.html
+++ b/index.html
@@ -156,7 +156,12 @@
             <ul>
               <li>
                 <i class="material-icons left">business</i>
-                <p class="comp_s">April 2022 - </p>
+                <p class="comp_s">Jul 2025 - </p>
+                <p class="comp_sh">Backend Engineer at Wnatedly, inc.</p>
+              </li>
+              <li>
+                <i class="material-icons left">business</i>
+                <p class="comp_s">April 2022 - Jun 2025</p>
                 <p class="comp_sh">System Engineer at 株式会社日立産業制御ソリューションズ</p>
               </li>
               <li>
