--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <img src="./assets/images/face.png" , width="100" height="100">
             </span><br />
             <h2 class="name_s">Mitsuhiro Komuro</h2>
-            <h3 class="position_s">System Engineer</h3>
+            <h3 class="position_s">Software Engineer</h3>
             <h3 class="email_s">E-mail:&nbsp;<a href="mailto:mitsuhiro.komuro@gmail.com">mitsuhiro.komuro@gmail.com</a></h3>
             <h3 class="affiliation">Affiliation:&nbsp;<a href="https://cis.hosei.ac.jp/gs/">Hosei University Graduate
                 school of Computer and Information Sciences</a></h3>
