feat(bio): update bio statements

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="card hoverable">
           <div class="card-content center">
             <span>
-              <img src="./assets/images/face.png" , width="100" height="100">
+              <img src="./assets/images/PXL_20231209_1210010409.png", width="100" height="100">
             </span><br />
             <h2 class="name_s">Mitsuhiro Komuro</h2>
             <h3 class="position_s">Software Engineer</h3>
@@ -105,7 +105,8 @@
             <p>
               Mr. Mitsuhiro Komuro received M.S. degrees in the Hosei University Graduate School of Computer
               and Information Sciences, Japan, in 2020.<br />
-              Since 2020, he has been a worker at Hitachi Industry &amp; Control Solutions, Ltd, Japan.<br />
+              Since 2020 to Jun 2025, he has been a worker at Hitachi Industry &amp; Control Solutions, Ltd, Japan.<br />
+              Since Jul 2025, he has been a backend engineer at Wantedly, Inc., Japan.<br />
               His research interest include realization of human-like artificial intelligence.
             </p>
           </div>
